--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,28 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Web site created ReactJS" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Matthew | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <meta name="description" content="Matt Favela Portfolio Website">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <meta itemprop="name" content="Matt Favela | Portfolio">
+  <meta itemprop="description" content="Matt Favela Portfolio Website">
+
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://mattfavela.replit.app">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <meta property="og:title" content="Matt Favela | Portfolio">
+  <meta property="og:description" content="Matt Favela Portfolio Website">
+
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
-  <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <meta name="twitter:title" content="Matt Favela | Portfolio">
+  <meta name="twitter:description" content="Matt Favela Portfolio Website">
+
 </head>
 
 <body>
