--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created ReactJS" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Matthew | Portfolio</title>
+  <title>Favela</title>
   <meta name="description" content="Matt Favela Portfolio Website">
 
   <!-- Google / Search Engine Tags -->
